--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -23,3 +23,8 @@ authors:
     name: Amanda Tambara
     description: Volunteer
     avatar: https://amandatambara.com/wp-content/uploads/2023/04/cropped-cropped-foto-amanda-tambara-22.png
+
+  anacarolyne:
+    name: Ana Carolyne
+    description: Volunteer
+    avatar: https://avatars.githubusercontent.com/u/111382055?v=4
