Refactor Python module documentation and enhance mkdocs configuration
- Updated the Python module documentation to provide a comprehensive introduction to modules, including creation, importation, and usage of standard library modules.
- Added examples for creating custom modules and packages, along with best practices for organization and usage.
- Enhanced the mkdocs configuration by adding content code copy and annotate features for improved documentation usability.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,8 @@ theme:
     - navigation.path
     - content.code.annotate
     - content.tabs.link
+    - content.code.copy
+    - content.code.annotate
     # - announce.dismiss
   icon:
     repo: fontawesome/brands/github
