fix: update task template name for clarity

--- a/.github/ISSUE_TEMPLATE/project-task.yml
+++ b/.github/ISSUE_TEMPLATE/project-task.yml
@@ -1,4 +1,4 @@
-name: "[TASK] Projeto]"
+name: "[TASK] Projeto da Associação"
 title: "[INICIATIVA] - "
 description: Desejo criar uma task em uma iniciativa.
 assignees:
