--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -20,7 +20,7 @@
 
 # https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/configuring-issue-templates-for-your-repository#configuring-the-template-chooser
 
-blank_issues_enabled: false
+blank_issues_enabled: true
 contact_links:
 
   - name: "🏆 [DISCUSSÕES] Certificado"
