--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,5 +5,5 @@ metadata:
   description: Site institucional da Codaqui
 spec:
   type: website
-  owner: endersonmenezes
+  owner: guests
   lifecycle: production
