chore(backstage): set owner to codaqui-conselho in codaqui-institucional catalog-info.yaml

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,5 +5,5 @@ metadata:
   description: Site institucional da Codaqui
 spec:
   type: website
-  owner: guests
+  owner: codaqui-conselho
   lifecycle: production
