--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,5 +5,5 @@ metadata:
   description: Site institucional da Codaqui
 spec:
   type: website
-  owner: codaqui-conselho
+  owner: conselho
   lifecycle: production
